2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_realize):
	Comment out two broken and unneded lines.

2008-05-06  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Only decrease the size of the scrollbar trough if the
	trough-under-steppers style property is set and steppers are present.
	Fixes bug #531633.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scrollbar_stepper),
	(clearlooks_draw_scrollbar_slider):
	Removed dead code; one translation 0.5 less.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	Removed the 0.5 translation.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_highlight_and_shade), (clearlooks_draw_menubar0),
	(clearlooks_draw_menubar2), (clearlooks_get_frame_gap_clip),
	(clearlooks_draw_frame), (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_types.h:
	More cleanups. Frame drawing mostly.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_shadow), (clearlooks_draw_gripdots),
	(clearlooks_draw_slider), (clearlooks_draw_slider_button),
	(clearlooks_draw_handle):
	More 0.5 offset cleanups (and radius fixes).

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_top_left_highlight), (clearlooks_draw_button),
	(clearlooks_draw_scrollbar_stepper):
	Button and clearlooks_draw_top_left_highlight cleanup and small fixes.

2008-05-01  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_entry):